[package]
name = "cryptochallenges"
version = "0.0.1"
authors = ["Ran Xing <ran.xing@gmail.com>"]
edition = "2018"

[lib]
name = "cryptochallenges"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
base64-serde = "0.3.2"
base64 = "0.10.1"
hex-serde = "0.1.0"
hex = "0.3.2"
serde_json = "1.0.40"
serde_derive = "1.0.100"
failure = "0.1.5"